--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1>Cloud Computing </h1> 
+    <title>Cloud Computing </title> 
   </head>
   <body>
     <h3> Kavya.S</h3>
